k8s/ingress/myblog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myblog-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: myblog-external
    networking.gke.io/managed-certificates: myblog-crt
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: alfheim-svc
    servicePort: 80
  rules:
    - http:
        paths:
          - path: /api/*
            backend:
              serviceName: argus-svc
              servicePort: 8000
